
2010-03-23
  
   * [FEATURE] Added counts to the tabulation canvas
   * [FEATURE] Improved filtering in tabulation canvas to support search results

2009-12-13

   * [FEATURE] Many new export options for Social Network Graphs
   * [FEATURE] Export LaTeX hyperlinks for documents based on message IDs
   * [FIX] Improved Velocity Whitespace Repair for improved indentation in exported files

2009-08-25

   * [FEATURE] Import mbox files 
   * [FIX] Made MBox import more robust to incorrect dates and header fields
   * [FEATURE] Added action to popup in document tree for reindexing 
               selected lists using Lucene
   * [FIX] Directory chooser finally remembers its location correctly
   * [FEATURE] LaTeX-Export is now more versatile and does not depend on hard coded sections. 
     To define an export profile use the following anywhere:
     
export: {
  file: "09-appendix/01-glossary.tex",
  
  section: {
    title: "Innovations",
    code: "innovation"
  },
  section: {
    title: "Glossary",
    label: "sec:glossary",
    section: {
      title: "Activities",
      code: "activity"
    },
    section: {
      title: "Uncategorized Codes",
      code: "-"
    }
  }
}

Uncategorized codes includes all codes which were cited by your LaTeX code 
using \dref but did not fit in the given explicit categories

2009-08-24

   * [FEATURE] Tabulation view cannot remove all completely empty rows and columns

2009-07-01

   * [FEATURE] GraphML Export

2009-06-03

   * [FIX] An empty filter will now return all documents
   * [FEATURE] Functionality added to print summary statistics regarding email written
   * [FEATURE] Suffix [cleanAuthor] in code for partitioning will call CUtils.cleanAuthor() 
               to make author names more readable. 

2009-05-19

   * [FEATURE] Export a social network to a Graphviz-Dot file (right click on a 
     document in the primary document tree -> Print Social Network to Dot-File...)