@@ -1,6 +1,5 @@
 package de.fu_berlin.inf.gmanda.qda;
 
-
 public interface CodedStringCore {
 
 	/**
@@ -9,12 +8,12 @@ public interface CodedStringCore {
 	void add(String tag);
 
 	/**
-	 * Remove all top-level codes with the given tag from this CodedString. 
+	 * Remove all top-level codes with the given tag from this CodedString.
 	 */
 	void remove(String tag);
 
 	/**
-	 * Returns true, iff there is a top-level code, with exactely the given tag. 
+	 * Returns true, iff there is a top-level code, with exactely the given tag.
 	 */
 	boolean contains(String tag);
 
@@ -24,16 +23,18 @@ public interface CodedStringCore {
 	Iterable<? extends Code> getAllCodes();
 
 	/**
-	 * Rename in all Codes the tags matching from to to. 
+	 * Rename in all Codes the tags matching from to to.
 	 * 
-	 * @return will return a new CodedStringCore representing the given 
+	 * @return will return a new CodedStringCore representing the result of the
+	 *         rename OR this if the CodedString did not change
 	 */
 	CodedString rename(String from, String to);
 
 	/**
 	 * Return a pretty printed version of this CodedString
+	 * 
 	 * @return
 	 */
 	String format();
-	
+
 }
